--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
             letter-spacing: 2px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
+        nav {
+            background: #ff5722;
+            padding: 15px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #ffeb3b;
+        }
         .container {
             padding: 40px;
         }
@@ -32,7 +49,7 @@
             border-radius: 15px;
             box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
             max-width: 800px;
-            transition: transform 0.3s;
+            transition: transform 0.3s ease-in-out;
         }
         .section:hover {
             transform: scale(1.05);
@@ -42,6 +59,10 @@
             max-width: 600px;
             border-radius: 15px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s;
+        }
+        img:hover {
+            transform: scale(1.1);
         }
         footer {
             background: #222;
@@ -53,18 +74,23 @@
 </head>
 <body>
     <header>Discover the Beauty of the Philippines</header>
+    <nav>
+        <a href="#culture">Culture</a>
+        <a href="#cuisine">Cuisine</a>
+        <a href="#destinations">Destinations</a>
+    </nav>
     <div class="container">
-        <div class="section">
+        <div id="culture" class="section">
             <h2>Rich Culture & Traditions</h2>
             <p>Experience the vibrant traditions of Bayanihan, Harana, and Tinikling, showcasing Filipino hospitality and artistry.</p>
             <img src="bayanihan.jpg" alt="Bayanihan">
         </div>
-        <div class="section">
+        <div id="cuisine" class="section">
             <h2>Delicious Filipino Cuisine</h2>
             <p>Try the famous Halo-Halo, a refreshing dessert that perfectly represents the diverse flavors of the Philippines.</p>
             <img src="halo-halo.jpg" alt="Halo-Halo">
         </div>
-        <div class="section">
+        <div id="destinations" class="section">
             <h2>Stunning Destinations</h2>
             <p>Explore breathtaking beaches, mountains, and historical sites that make the Philippines a top travel destination.</p>
             <img src="beach.jpg" alt="Philippine Beach">
