--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             background: linear-gradient(90deg, #ff9800, #ff5722);
             padding: 30px;
             color: white;
-            font-size: 32px;
+            font-size: 40px;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 2px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
         }
         nav {
             background: #ff5722;
-            padding: 15px;
+            padding: 20px;
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px;
         }
         nav a {
             color: white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
             transition: color 0.3s;
         }
@@ -40,15 +40,15 @@
             color: #ffeb3b;
         }
         .container {
-            padding: 40px;
+            padding: 50px;
         }
         .section {
             background: white;
-            padding: 30px;
-            margin: 30px auto;
-            border-radius: 15px;
-            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
+            padding: 40px;
+            margin: 40px auto;
+            border-radius: 20px;
+            box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+            max-width: 900px;
             transition: transform 0.3s ease-in-out;
             cursor: pointer;
         }
@@ -60,9 +60,9 @@
         }
         img {
             width: 100%;
-            max-width: 600px;
-            border-radius: 15px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+            max-width: 700px;
+            border-radius: 20px;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
             transition: transform 0.3s;
         }
         img:hover {
@@ -71,8 +71,8 @@
         footer {
             background: #222;
             color: white;
-            padding: 20px;
-            font-size: 18px;
+            padding: 30px;
+            font-size: 20px;
         }
     </style>
     <script>
@@ -83,7 +83,7 @@
     </script>
 </head>
 <body>
-    <header>Discover the Beauty of the Philippines</header>
+    <header>Discover the Grand Beauty of the Philippines</header>
     <nav>
         <a href="#culture">Culture</a>
         <a href="#cuisine">Cuisine</a>
@@ -92,43 +92,43 @@
     <div class="container">
         <div id="culture" class="section" onclick="toggleDetails('culture')">
             <h2>Rich Culture & Traditions</h2>
-            <p>Experience the vibrant traditions of Bayanihan, Harana, and Tinikling.</p>
+            <p>Experience the breathtaking traditions of Bayanihan, Harana, and Tinikling, each deeply rooted in Filipino history.</p>
             <div id="culture-details" class="hidden">
                 <ul>
-                    <li><strong>Bayanihan:</strong> The spirit of communal unity and cooperation.</li>
-                    <li><strong>Harana:</strong> A traditional way of courtship through serenades.</li>
-                    <li><strong>Tinikling:</strong> A folk dance that mimics the movement of birds among bamboo traps.</li>
+                    <li><strong>Bayanihan:</strong> The inspiring spirit of communal unity and cooperation where neighbors help each other selflessly.</li>
+                    <li><strong>Harana:</strong> A classic and romantic tradition where men serenade women with heartfelt love songs.</li>
+                    <li><strong>Tinikling:</strong> The national dance of the Philippines, mimicking the agility and grace of birds evading bamboo traps.</li>
                 </ul>
                 <img src="bayanihan.jpg" alt="Bayanihan">
             </div>
         </div>
         <div id="cuisine" class="section" onclick="toggleDetails('cuisine')">
-            <h2>Delicious Filipino Cuisine</h2>
-            <p>Try the famous Halo-Halo, a refreshing dessert with diverse flavors.</p>
+            <h2>World-Class Filipino Cuisine</h2>
+            <p>Filipino food is a vibrant mix of flavors influenced by Spanish, Chinese, and Malay culinary traditions.</p>
             <div id="cuisine-details" class="hidden">
                 <ul>
-                    <li><strong>Ingredients:</strong> Shaved ice, sweetened beans, jellies, leche flan, and ube.</li>
-                    <li><strong>How to Enjoy:</strong> Mix everything together and savor the explosion of flavors.</li>
-                    <li><strong>Best Time to Eat:</strong> Perfect for hot summer days!</li>
+                    <li><strong>Halo-Halo:</strong> A delicious blend of shaved ice, sweetened beans, jellies, leche flan, and ube, perfect for a tropical climate.</li>
+                    <li><strong>Lechon:</strong> The world-famous roasted pig with crispy golden skin and juicy, flavorful meat.</li>
+                    <li><strong>Adobo:</strong> A classic dish of marinated meat cooked in soy sauce, vinegar, garlic, and spices.</li>
                 </ul>
                 <img src="halo-halo.jpg" alt="Halo-Halo">
             </div>
         </div>
         <div id="destinations" class="section" onclick="toggleDetails('destinations')">
-            <h2>Stunning Destinations</h2>
-            <p>Explore breathtaking beaches, mountains, and historical sites.</p>
+            <h2>Breathtaking Destinations</h2>
+            <p>From pristine beaches to magnificent mountains, the Philippines offers a paradise for every traveler.</p>
             <div id="destinations-details" class="hidden">
                 <ul>
-                    <li><strong>Boracay:</strong> Famous for its white sandy beaches and crystal-clear waters.</li>
-                    <li><strong>Banaue Rice Terraces:</strong> A stunning UNESCO World Heritage site.</li>
-                    <li><strong>Palawan:</strong> Home to the underground river and stunning limestone cliffs.</li>
+                    <li><strong>Boracay:</strong> A world-renowned island with powdery white sands and mesmerizing turquoise waters.</li>
+                    <li><strong>Banaue Rice Terraces:</strong> A magnificent 2,000-year-old UNESCO World Heritage site carved into the mountains.</li>
+                    <li><strong>El Nido, Palawan:</strong> A paradise of towering limestone cliffs, crystal-clear lagoons, and rich marine life.</li>
                 </ul>
                 <img src="beach.jpg" alt="Philippine Beach">
             </div>
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 Discover the Philippines | Your Ultimate Travel Guide</p>
+        <p>&copy; 2025 Discover the Philippines | Your Ultimate Travel & Culture Guide</p>
     </footer>
 </body>
 </html>
